overflow issues fixed

--- a/src/css/Shared/page2.css
+++ b/src/css/Shared/page2.css
@@ -9,6 +9,7 @@ html{
     height:100%;
     padding: 0;
     margin:0;
+    overflow: none;
 }
 
 .Body2Part{
